--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>controle-carteira-process</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-        <parent>
+    <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
@@ -27,36 +27,32 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+                <version>2.1.3.RELEASE</version>
+            </dependency>
+            <dependency>
                 <groupId>org.camunda.bpm</groupId>
                 <artifactId>camunda-bom</artifactId>
                 <scope>import</scope>
                 <type>pom</type>
                 <version>${camunda.version}</version>
-            </dependency>            
+            </dependency>
             
+
             <dependency>
                 <groupId>org.camunda.bpm.dmn</groupId>
                 <artifactId>camunda-engine-dmn-bom</artifactId>
                 <scope>import</scope>
-                <type>pom</type>                
-                <version>${camunda.version}</version>                
-            </dependency>            
-        </dependencies>
-    </dependencyManagement>
-
-<!--
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.camunda.bpm</groupId>
-                <artifactId>camunda-bom</artifactId>
-                <version>7.10.0</version>
-                <scope>import</scope>
                 <type>pom</type>
+                <version>${camunda.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
--->
+
+    <!-- <dependencyManagement> <dependencies> <dependency> <groupId>org.camunda.bpm</groupId> 
+        <artifactId>camunda-bom</artifactId> <version>7.10.0</version> <scope>import</scope> 
+        <type>pom</type> </dependency> </dependencies> </dependencyManagement> -->
 
     <dependencies>
         <dependency>
@@ -68,11 +64,11 @@
             <groupId>org.camunda.bpm.springboot</groupId>
             <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
             <version>3.2.0</version>
-        </dependency>        
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
         </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.h2database</groupId> -->
+<!--             <artifactId>h2</artifactId> -->
+<!--         </dependency> -->
 
         <!-- Camunda DMN -->
         <dependency>
@@ -103,7 +99,14 @@
             <artifactId>java-jwt</artifactId>
             <version>3.4.0</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
